# zotomatic

./: .gitignore  CHANGELOG.md  README.ja.md  README.md  pyproject.toml
.zotomatic/db/: README.md  schema.sql
.zotomatic/db/migrations/: 001_init.sql
docs/: er-diagram.md
docs/en/: cli.md  configuration.md  getting-started.md  index.md
docs/ja/: cli.md  configuration.md  getting-started.md  index.md
src/zotomatic/: __init__.py  cli.py  config.py  errors.py  i18n.py  logging.py  pipelines.py  repositories.py
src/zotomatic/llm/: client.py  types.py
src/zotomatic/note/: __init__.py  builder.py  types.py  updater.py  workflow.py
src/zotomatic/repositories/: __init__.py  note_repository.py  pdf_repository.py  sqlite_base.py  types.py  watcher_log_repository.py  watcher_state_repository.py
src/zotomatic/repositories/state/: __init__.py  repository.py
src/zotomatic/repositories/state/sqlite/: base.py  directory_state.py
src/zotomatic/repositories/watcher_state/: repository.py
src/zotomatic/repositories/watcher_state/sqlite/: base.py  directory_state.py  file_state.py  meta.py  pending.py  repository.py  zotero_attachment.py
src/zotomatic/services/: __init__.py  llm_usage.py  pending_queue.py  pending_queue_processor.py  pending_resolver.py  types.py  zotero_resolver.py
src/zotomatic/templates/: note.md
src/zotomatic/utils/: note.py  pdf.py  slug.py
src/zotomatic/watcher/: types.py  watcher.py
src/zotomatic/zotero/: client.py  enricher.py  types.py
tests/cli/: test_cli.py
tests/component/: test_llm_client.py  test_note_builder.py  test_pipelines.py  test_services_pending_queue_processor.py  test_watcher.py
tests/integration/: test_repositories_sqlite.py
tests/unit/: test_config.py  test_llm_client_gemini.py  test_llm_types.py  test_note_utils.py
tests/zotero/: test_enricher.py
