[project]
name = "zotomatic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "glyphcat", email = "glyphcat13@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "pdfminer.six>=20240706",
    "pymupdf>=1.26.4",
    "pyzotero>=1.6.16",
    "watchfiles>=1.1.0",
]

[project.scripts]
zotomatic = "zotomatic.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]
