[project]
name = "zotomatic"
version = "0.1.0"
description = "A CLI tool for generating Markdown notes from academic PDF papers using customizable templates, Zotero metadata, and LLM-powered summaries."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "glyphcat", email = "glyphcat13@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pdfminer.six>=20240706",
    "pymupdf>=1.26.7",
    "pyzotero>=1.6.16",
    "watchfiles>=1.1.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Source = "https://github.com/glyphcat/zotomatic"
Issues = "https://github.com/glyphcat/zotomatic/issues"
Documentation = "https://github.com/glyphcat/zotomatic#readme"

[project.scripts]
zotomatic = "zotomatic.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]
